--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -2,16 +2,13 @@
 <html>
 <head lang="en">
   <meta charset="UTF-8">
-  <link href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"
-        rel="stylesheet"/>
+  <link href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet"/>
   <link href="./styles.css" rel="stylesheet" />
-  <title>NodeWebkit FTW!</title>
+  <title></title>
 </head>
 <body>
   <div class="container">
-  </div><!-- /.container -->
-  <canvas id="canvas" width="300" height="300"></canvas>
-
+  </div>
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
